2008-03-19  Matthias Clasen  <mclasen@redhat.com>

	* gio/overview.xml: Document GVS_DISABLE_FUSE.

2008-03-12  Benjamin Otte  <otte@gnome.org>

	* gio/gio-sections.txt:
	g_file_contains_file() doesn't exist anymore

2008-03-10  Matthias Clasen  <mclasen@redhat.com>
	
	* === Released 2.16.1 ===

2008-03-10  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.16.0 ===

2008-03-10  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/linked_lists_double.sgml:
	* glib/tmpl/linked_lists_single.sgml: Remove docs that have
	been inlined.

2008-03-10  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/types.sgml: Add a Since marker for goffset (#521013,
	Charles Kerr)

2008-02-29  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/linked_lists_double.sgml: Move docs inline

2008-02-25  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.6 ===

2008-02-23  Matthias Clasen  <mclasen@redhat.com>

	* gio/gio-sections.txt: Updates

2008-02-21  Tor Lillqvist  <tml@novell.com>

	* glib/running.sgml: Clarify character set issues on Windows.

2008-02-13  Ryan Lortie  <desrt@desrt.ca>

        * gio/gio-sections.txt: add G_FILE_ATTRIBUTE_TRASH_ITEM_COUNT

2008-02-12  Matthias Clasen <mclasen@redhat.com>

	* gio/migration.xml: Add a note about mime monitoring

2008-02-11  Matthias Clasen <mclasen@redhat.com>

	* === Released 2.15.5 ===

2008-02-11  Matthias Clasen <mclasen@redhat.com>

	* gio/gio-docs.xml:
	* gio/gio-sections.txt:
	* gio/overview.xml: Documentation additions

2008-02-10  Philip Withnall  <pwithnall@svn.gnome.org>

	* glib/tmpl/modules.sgml: Improve the documentation for
	the G_MODULE_EXPORT macro. (#514470)

2008-02-09  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/i18n.sgml: Improve the documentation for the
	N_() macro.  (#514053, Tommi Vainikainen)

2008-01-29  Christian Persch  <chpe@gnome.org>

	* glib/tmpl/macros_misc.sgml: G_GNUC_[PRETTY_]FUNCTION are
	deprecated since 2.16, not 2.14.

2008-01-28  Matthias Clasen  <mclasen@redhat.com>
