@@ -1,3 +1,8 @@
+2008-03-28  A. Walton  <awalton@svn.gnome.org>
+
+	* gio/overview.xml:
+	Document GIO_EXTRA_MODULES, fixes a small typo.
+
 2008-03-19  Matthias Clasen  <mclasen@redhat.com>
 
 	* gio/overview.xml: Document GVS_DISABLE_FUSE.
